--- a/HackFSU/Base.lproj/Main.storyboard
+++ b/HackFSU/Base.lproj/Main.storyboard
@@ -21,6 +21,9 @@
         <array key="AvenirNextCondensed.ttc">
             <string>AvenirNextCondensed-BoldItalic</string>
         </array>
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Live Feed-->
@@ -32,7 +35,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lOm-jb-IJh">
-                                <rect key="frame" x="0.0" y="248" width="375" height="481"/>
+                                <rect key="frame" x="0.0" y="241" width="375" height="571"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LiveFeedCell" id="tVc-ei-EIi">
@@ -41,21 +44,61 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tVc-ei-EIi" id="63C-h1-D2v">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pue-X7-7AK">
+                                                    <rect key="frame" x="123" y="0.0" width="460" height="22"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Thur 05:43 AM" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V1N-bR-Csz">
+                                                    <rect key="frame" x="15" y="13" width="100" height="17"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fs4-0f-f5m">
+                                                    <rect key="frame" x="123" y="26" width="568" height="17"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.42490530009999999" green="0.42490530009999999" blue="0.42490530009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Confeti bottom" translatesAutoresizingMaskIntoConstraints="NO" id="mx2-0v-q3g">
+                                <rect key="frame" x="248" y="52" width="157" height="142"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="liveFeedLogo" translatesAutoresizingMaskIntoConstraints="NO" id="ufi-5Y-lVa">
+                                <rect key="frame" x="0.0" y="117" width="228" height="71"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.54377239942550659" green="0.19812506437301636" blue="0.98386961221694946" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="lOm-jb-IJh" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="160" id="7PQ-R4-IaP"/>
-                            <constraint firstItem="lOm-jb-IJh" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="GR6-kb-cO4"/>
-                            <constraint firstAttribute="trailing" secondItem="lOm-jb-IJh" secondAttribute="trailing" id="Xdz-4Y-H8m"/>
-                            <constraint firstItem="lOm-jb-IJh" firstAttribute="bottom" secondItem="PQr-Ze-W5v" secondAttribute="bottom" id="lh7-99-7YV"/>
+                            <constraint firstItem="mx2-0v-q3g" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="topMargin" constant="-36" id="3Yq-1F-XHx"/>
+                            <constraint firstItem="mx2-0v-q3g" firstAttribute="leading" secondItem="ufi-5Y-lVa" secondAttribute="trailing" constant="20" id="Bai-zF-YqY"/>
+                            <constraint firstAttribute="bottom" secondItem="lOm-jb-IJh" secondAttribute="bottom" id="D5c-a5-iqO"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="ufi-5Y-lVa" secondAttribute="trailing" constant="147" id="JkV-s5-8hM"/>
+                            <constraint firstAttribute="trailing" secondItem="lOm-jb-IJh" secondAttribute="trailing" id="L6k-Gr-aC8"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="mx2-0v-q3g" secondAttribute="trailing" constant="-46" id="TkT-fW-NMv"/>
+                            <constraint firstItem="ufi-5Y-lVa" firstAttribute="leading" secondItem="lOm-jb-IJh" secondAttribute="leading" id="flr-Bw-ZCq"/>
+                            <constraint firstItem="lOm-jb-IJh" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="hXY-g8-QdJ"/>
+                            <constraint firstItem="ufi-5Y-lVa" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="29" id="ix7-5k-3id"/>
+                            <constraint firstItem="lOm-jb-IJh" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="153" id="jpL-kz-Ivk"/>
+                            <constraint firstItem="lOm-jb-IJh" firstAttribute="top" secondItem="ufi-5Y-lVa" secondAttribute="bottom" constant="53" id="sCA-Zv-HGS"/>
+                            <constraint firstItem="lOm-jb-IJh" firstAttribute="top" secondItem="mx2-0v-q3g" secondAttribute="bottom" constant="47" id="vXl-l1-qKG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <navigationItem key="navigationItem" title="Live Feed" id="L8r-zC-9de"/>
+                    <connections>
+                        <outlet property="tableView" destination="lOm-jb-IJh" id="lul-0b-haO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
@@ -1188,7 +1231,6 @@
         <!--First Hack View Controller-->
         <scene sceneID="wVM-Vd-TcG">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aoZ-Ig-fr4" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="FirstHackView" id="rWX-PS-89W" customClass="FirstHackViewController" customModule="HackFSU" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4gj-L2-Uei">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
@@ -1303,6 +1345,7 @@
                         <outlet property="tableDescriptionLabel" destination="ghZ-f5-9fs" id="Shq-RN-BY0"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aoZ-Ig-fr4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3162" y="2237"/>
         </scene>
@@ -1451,13 +1494,14 @@
     <resources>
         <image name="Confeti bottom" width="283" height="196"/>
         <image name="HackFsuFether" width="197" height="79"/>
-        <image name="InfoPageSidebarWShadow" width="1831" height="548"/>
+        <image name="InfoPageSidebarWShadow" width="611" height="183"/>
         <image name="ThursdayCirclePink" width="158" height="158"/>
         <image name="alertFeather" width="1291" height="1149"/>
         <image name="diracFloor2" width="700" height="419"/>
         <image name="gear-7" width="30" height="30"/>
         <image name="lineColorImage" width="3000" height="3000"/>
         <image name="list-simple-7" width="30" height="30"/>
+        <image name="liveFeedLogo" width="611" height="183"/>
         <image name="plus-simple-7" width="30" height="30"/>
         <image name="qr" width="520" height="521"/>
         <image name="rss-7" width="30" height="30"/>
